<resources>
    <string name="app_name">Lemon Cafe</string>
    <string name="Hotpot">You really appreciate hotpot rather than just ordering fried rice, chow mein, and dim sum all the time, you are truly a Chinese cuisine fan!</string>
    <string name="SichuanPork">Rather than cooking pork by stir-frying or deep-frying, which consumes lots of oil and can very easily overcook the pork, it is boiled in water with a coating made from egg-white and starch to preserve its freshness and tenderness.</string>
    <string name="PorkBalls"> If you like meatballs and spaghetti, you’ll probably appreciate Chinese meatballs as well. The super-smooth and flavory gravy is almost like a “drug sauce” keeping your taste buds wanting more and more.</string>
    <string name="Shrimp">This steamed dish brings out the aroma of everything it has. The heavy garlic with a seafood sauce flavor blends with the freshness of juicy shrimp.</string>
    <string name="Dumplings">Popular fillings are mince pork, diced shrimp, ground chicken, beef, and vegetables. They can be cooked by boiling, steaming, or frying.</string>
    <string name="ChowMein">or making chow mein, the noodles need to be cooked in boiling water for a while. After they becoming cool, then move to the step of stir-frying.</string>
    <string name="RoastedDuck">Peking duck is savored for its thin and crispy skin. The Sliced Peking duck is often eaten with pancakes, sweet bean sauce, or soy with mashed garlic.</string>
    <string name="SteamedVermicelli">White sheets of rice starch are rolled with various fillings. Some popular choices are beef/pork, shrimp, even oyster, with mushroom, egg, lettuce, watercress etc. </string>
    <string name="FriedShrimp">You get the tenderness of peeled shrimps and the crispiness of cashew nuts. The shrimp is always tender and juicy and easy to deal with </string>

<!--    Thiran-->
    <string name="tv_1">SELECTED ITEMS</string>
    <string name="tv_2">APPETIZER</string>
    <string name="tv_3">MAIN COURSE</string>
    <string name="tv_4"> DESSERT </string>
    <string name="tv_5">OTHER</string>
    <string name="title_activity_main3">MainActivity</string>

    <string name="e_txt_dt_1">ADD DATE</string>
    <string name="e_txt_tm_1">ADD TIME</string>
    <string name="e_txt_num_1">No of People</string>
    <string name="e_txt_addr_1">Adderess</string>
    <string name="tv_menu">MENU</string>
    <string name="btn_appetizer">APPETIZER</string>
    <string name="btn_mainCourse">MAIN COURSE</string>
    <string name="btn_dessert">DESSERT</string>
    <string name="btn_other">OTHER</string>
    <string name="btn_viewSelected">VIEW SELECTED ITEMS</string>
    <string name="sel_itm_discard_btn">DISCARD</string>
    <string name="sel_itm_confirm_btn">CONFIRM</string>
    <string name="tv_Apptzr_title">APPETIZER</string>
    <string name="tv_Breakfast_Apptzr">Breakfast</string>
    <string name="tv_Lunch_Apptzr">Lunch</string>
    <string name="tv_Dinner_Apptzr">Dinner</string>
    <string name="tv_other_title">OTHER</string>
    <string name="btn_Next_Apptzr">NEXT</string>
    <string name="tv_MainCourse_title">MAIN COURSE</string>
    <string name="tv_Dessert_title">DESSERT</string>
    <string name="tv_view_event_dtls">VIEW EVENT DETAILS</string>
    <string name="btn_discard">DISCARD</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="btn_view_initial_details">VIEW DETAILS</string>
    <string name="update_button">UPDATE</string>
    <string name="ShowOrderID">"ORDER ID: "</string>

<!--    Yohan-->
    <string name="Welcome">WELCOME</string>
    <string name="to">TO</string>
    <string name="lemonCafe">LEMON CAFE </string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_mobile_number_hint">Mobile Number</string>
    <string name="register_password_hint">Password</string>
    <string name="register_address_hint">Address</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="previous_orders">PREVIOUS ORDERS</string>
    <string name="member_area">MEMBER AREA</string>
    <string name="feedbacks">FEEDBACKS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="delete_my_account">DELETE MY ACCOUNT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="edit">EDIT</string>
    <string name="change_current_password_hint">Current Password</string>
    <string name="change_new_password_hint">New Password</string>
    <string name="change_confirm_password_hint">Confirm Password</string>
    <string name="account_delete_reason">Reason To Delete Account</string>
    <string name="save">SAVE</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="available_coupon">Available Coupon</string>
    <string name="coupon_id">Coupon ID</string>
    <string name="daily_offers">Daily Offers</string>
    <string name="recently_ordered">Recently Ordered</string>
    <string name="why_us">Why Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="facebook">Lemon Cafe</string>
    <string name="insta">Lemon.Cafe</string>
    <string name="number">+94113102102</string>
    <string name="address_1">No.130/A,Highlevel Road,Maharagama.</string>
    <string name="Report">Report</string>
    <string name="what">What is up with your Order?</string>
    <string name="submit_report">Submit Report</string>
    <string name="description">Description</string>
    <string name="successful_message_1">We are sorry for here report from you!</string>
    <string name="successful_message_2">We will contact you as soon as possible</string>
    <string name="background002">background002</string>
    <string name="signUpAvatar">signUpAvatar</string>
    <string name="getStarted">GET STARTED</string>
    <string name="back7">back7</string>
    <string name="logo">logo</string>
    <string name="back8">back8</string>
    <string name="avatar">avatar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

<!--    kalindu-->
    <string name="time">Time</string>
    <string name="btn_edit">edit</string>
    <string name="date">Date</string>
    <string name="table_reservation">Table Reservation</string>
    <string name="no_of_persons">No.of persons</string>
    <string name="order_something">Order Something(Rice/Koththu)</string>
    <string name="order">Order</string>
    <string name="savedetails">save</string>


</resources>