<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".UserAccount">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/path_10" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/group_10" />

    <Button
        android:id="@+id/personalData"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:onClick="personalDetails"
        android:text="@string/personal_information"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/feedbacks"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:onClick="feedbacks"
        android:text="@string/feedbacks"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:onClick="changePassword"
        android:text="@string/change_password"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.299" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="123dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:onClick="signOut"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/deleteAccount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="123dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/delete_my_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753" />
</androidx.constraintlayout.widget.ConstraintLayout>