<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".sign_in">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="809dp"
        android:background="@drawable/union_1"
        android:backgroundTint="@color/black"
        android:foreground="@drawable/union_1"
        android:foregroundTint="#000000"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="292dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Email"
        android:background="@drawable/roundtextcorner"
        android:backgroundTint="@color/white"

        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.087"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="293dp"
        android:layout_height="78dp"
        android:autofillHints="Password"
        android:background="@drawable/roundtextcorner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="141dp"
        android:layout_height="67dp"
        android:background="@drawable/rectangle_1"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/cinzeldecorative_bold"
        android:onClick="userAccount"
        android:text="@string/signIn"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPassword"
        app:layout_constraintVertical_bias="0.404"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>